@@ -509,6 +509,7 @@ All (GUI):
 - wxRTC: corrected centring and right-justification spacing.
 - wxRTC: fixed style selection reset after editing a style.
 - wxRTC: can now edit line spacing in .1 increments from 1 to 2.
+- wxRTC: added PaintAboveContent function for drawing on top of text.
 - Added wxBORDER_THEME to XRC.
 - wxGraphicsContext is now enabled by default if supported by the platform.
 - Fix building with using system libpng 1.4 (Volker Grabsch).
